// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableHeader props onSort invoke onSort with property when HeadCell is clicked 1`] = `
<thead>
  <TableRow
    sticky={true}
  >
    <HeadCell
      cellStyle={
        Object {
          "width": "50%",
        }
      }
      components={
        Object {
          "HeadCell": [Function],
          "HeadRow": Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "styled__TableRow-r3xwjs-3",
              "isStatic": false,
              "rules": Array [
                "background-color:",
                "#ffffff",
                ";border-bottom:1px solid ",
                "#dcdce7",
                ";td,th{",
                [Function],
                "};",
              ],
            },
            "displayName": "TableRow",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "styled__TableRow-r3xwjs-3",
            "target": "tr",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          },
        }
      }
      key="name"
      onClick={[Function]}
      order={false}
      sortable={true}
    >
      Subject Name
    </HeadCell>
    <HeadCell
      cellStyle={Object {}}
      components={
        Object {
          "HeadCell": [Function],
          "HeadRow": Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "styled__TableRow-r3xwjs-3",
              "isStatic": false,
              "rules": Array [
                "background-color:",
                "#ffffff",
                ";border-bottom:1px solid ",
                "#dcdce7",
                ";td,th{",
                [Function],
                "};",
              ],
            },
            "displayName": "TableRow",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "styled__TableRow-r3xwjs-3",
            "target": "tr",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          },
        }
      }
      key="dob"
      onClick={[Function]}
      order={false}
      sortable={true}
    >
      Date of Birth
    </HeadCell>
    <HeadCell
      cellStyle={Object {}}
      components={
        Object {
          "HeadCell": [Function],
          "HeadRow": Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "styled__TableRow-r3xwjs-3",
              "isStatic": false,
              "rules": Array [
                "background-color:",
                "#ffffff",
                ";border-bottom:1px solid ",
                "#dcdce7",
                ";td,th{",
                [Function],
                "};",
              ],
            },
            "displayName": "TableRow",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "styled__TableRow-r3xwjs-3",
            "target": "tr",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          },
        }
      }
      key="manager"
      onClick={[Function]}
      order={false}
      sortable={true}
    >
      Manager
    </HeadCell>
    <HeadCell
      cellStyle={Object {}}
      components={
        Object {
          "HeadCell": [Function],
          "HeadRow": Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "styled__TableRow-r3xwjs-3",
              "isStatic": false,
              "rules": Array [
                "background-color:",
                "#ffffff",
                ";border-bottom:1px solid ",
                "#dcdce7",
                ";td,th{",
                [Function],
                "};",
              ],
            },
            "displayName": "TableRow",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "styled__TableRow-r3xwjs-3",
            "target": "tr",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          },
        }
      }
      key="lastUpdated"
      onClick={[Function]}
      order={false}
      sortable={true}
    >
      Last Updated
    </HeadCell>
  </TableRow>
</thead>
`;

exports[`TableHeader props order and orderBy should pass order to HeadCell when orderBy matches header key 1`] = `
<thead>
  <TableRow
    sticky={true}
  >
    <HeadCell
      cellStyle={
        Object {
          "width": "50%",
        }
      }
      components={
        Object {
          "HeadCell": [Function],
          "HeadRow": Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "styled__TableRow-r3xwjs-3",
              "isStatic": false,
              "rules": Array [
                "background-color:",
                "#ffffff",
                ";border-bottom:1px solid ",
                "#dcdce7",
                ";td,th{",
                [Function],
                "};",
              ],
            },
            "displayName": "TableRow",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "styled__TableRow-r3xwjs-3",
            "target": "tr",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          },
        }
      }
      key="name"
      order="asc"
      sortable={true}
    >
      Subject Name
    </HeadCell>
    <HeadCell
      cellStyle={Object {}}
      components={
        Object {
          "HeadCell": [Function],
          "HeadRow": Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "styled__TableRow-r3xwjs-3",
              "isStatic": false,
              "rules": Array [
                "background-color:",
                "#ffffff",
                ";border-bottom:1px solid ",
                "#dcdce7",
                ";td,th{",
                [Function],
                "};",
              ],
            },
            "displayName": "TableRow",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "styled__TableRow-r3xwjs-3",
            "target": "tr",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          },
        }
      }
      key="dob"
      order={false}
      sortable={true}
    >
      Date of Birth
    </HeadCell>
    <HeadCell
      cellStyle={Object {}}
      components={
        Object {
          "HeadCell": [Function],
          "HeadRow": Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "styled__TableRow-r3xwjs-3",
              "isStatic": false,
              "rules": Array [
                "background-color:",
                "#ffffff",
                ";border-bottom:1px solid ",
                "#dcdce7",
                ";td,th{",
                [Function],
                "};",
              ],
            },
            "displayName": "TableRow",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "styled__TableRow-r3xwjs-3",
            "target": "tr",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          },
        }
      }
      key="manager"
      order={false}
      sortable={true}
    >
      Manager
    </HeadCell>
    <HeadCell
      cellStyle={Object {}}
      components={
        Object {
          "HeadCell": [Function],
          "HeadRow": Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "styled__TableRow-r3xwjs-3",
              "isStatic": false,
              "rules": Array [
                "background-color:",
                "#ffffff",
                ";border-bottom:1px solid ",
                "#dcdce7",
                ";td,th{",
                [Function],
                "};",
              ],
            },
            "displayName": "TableRow",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "styled__TableRow-r3xwjs-3",
            "target": "tr",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          },
        }
      }
      key="lastUpdated"
      order={false}
      sortable={true}
    >
      Last Updated
    </HeadCell>
  </TableRow>
</thead>
`;

exports[`TableHeader render should render a thead at the root 1`] = `
<thead>
  <TableRow
    sticky={true}
  />
</thead>
`;

exports[`TableHeader render should render sortable HeadCells 1`] = `
<thead>
  <TableRow
    sticky={true}
  >
    <HeadCell
      cellStyle={
        Object {
          "width": "50%",
        }
      }
      components={
        Object {
          "HeadCell": [Function],
          "HeadRow": Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "styled__TableRow-r3xwjs-3",
              "isStatic": false,
              "rules": Array [
                "background-color:",
                "#ffffff",
                ";border-bottom:1px solid ",
                "#dcdce7",
                ";td,th{",
                [Function],
                "};",
              ],
            },
            "displayName": "TableRow",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "styled__TableRow-r3xwjs-3",
            "target": "tr",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          },
        }
      }
      key="name"
      order={false}
      sortable={true}
    >
      Subject Name
    </HeadCell>
    <HeadCell
      cellStyle={Object {}}
      components={
        Object {
          "HeadCell": [Function],
          "HeadRow": Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "styled__TableRow-r3xwjs-3",
              "isStatic": false,
              "rules": Array [
                "background-color:",
                "#ffffff",
                ";border-bottom:1px solid ",
                "#dcdce7",
                ";td,th{",
                [Function],
                "};",
              ],
            },
            "displayName": "TableRow",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "styled__TableRow-r3xwjs-3",
            "target": "tr",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          },
        }
      }
      key="dob"
      order={false}
      sortable={true}
    >
      Date of Birth
    </HeadCell>
    <HeadCell
      cellStyle={Object {}}
      components={
        Object {
          "HeadCell": [Function],
          "HeadRow": Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "styled__TableRow-r3xwjs-3",
              "isStatic": false,
              "rules": Array [
                "background-color:",
                "#ffffff",
                ";border-bottom:1px solid ",
                "#dcdce7",
                ";td,th{",
                [Function],
                "};",
              ],
            },
            "displayName": "TableRow",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "styled__TableRow-r3xwjs-3",
            "target": "tr",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          },
        }
      }
      key="manager"
      order={false}
      sortable={true}
    >
      Manager
    </HeadCell>
    <HeadCell
      cellStyle={Object {}}
      components={
        Object {
          "HeadCell": [Function],
          "HeadRow": Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "styled__TableRow-r3xwjs-3",
              "isStatic": false,
              "rules": Array [
                "background-color:",
                "#ffffff",
                ";border-bottom:1px solid ",
                "#dcdce7",
                ";td,th{",
                [Function],
                "};",
              ],
            },
            "displayName": "TableRow",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "styled__TableRow-r3xwjs-3",
            "target": "tr",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          },
        }
      }
      key="lastUpdated"
      order={false}
      sortable={true}
    >
      Last Updated
    </HeadCell>
  </TableRow>
</thead>
`;
